<resources>
    <string name="app_name">Main Posture App</string>
    <string name="title_stats">Stats</string>
    <string name="title_importexport">Import/Export</string>
    <string name="title_download">Download</string>
    <string name="title_settings">Settings</string>
    <string name="title_connect">Connect</string>
    <string name="source_google_drive">Google Drive</string>
    <string name="start_drive">Start Google Drive</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="export">Export</string>
    <string name="clear">Clear Data</string>
    <string name="imp">Import</string>
    <string name="status_logged_out">Logged Out</string>
    <string name="status_logged_in">Logged In</string>
    <string name="status_user_cancelled">User Cancelled</string>
    <string name="status_error">We found a problem: %1$s</string>
    <string name="not_open_file">Could not open file</string>
    <string name="server_client_id">1074860823358-ekoi8qoce8q68agullk4fi1rk1fi6bid.apps.googleusercontent.com</string>
</resources>
